<resources>
    <string name="app_name">Where2go</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginbtn">Login</string>
    <string name="signup">Register</string>
    <string name="fullname">Full name</string>
    <string name="forgottenpassword"><u>Forgot password?</u></string>
    <string name="signuphere"><u>Don\'t have an account? Register here!</u></string>
    <string name="withoutAccount"><u>Back to the maps -></u></string>
    <string name="loginhere"><u>Already have an account? Login here! </u></string>
    <string name="email">Email</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaW9hbmFiYW51IiwiYSI6ImNremN4MDhkcDA0czEyd3BkMHM4NDR0Ym4ifQ.LGeZqxN1fmU3SL2wHHOh8w</string>
    <string name="start_navigation">Start navigation</string>
    <string name="user_location_permission_explanation">This app needs permission to access your location</string>
    <string name="user_location_permission_not_granted">You didn\'t granted permission to access your location</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>